# Favour_Adeboye

./: README.md  W3  sample readme.md  todo_list_app.py
Automation_Task/: automation_task.py  manifest-alpha-363108-fb069bca3c7c.json
Data_Wrangling/: Data_Wrangling_on_Factory_Data.ipynb  cleaned_factory_data.csv
Data_Wrangling_Task2/: .gitignore  Data_Wrangling_on_Waiters_Cash_Sales.ipynb
Datawrangler/: README.md  pyproject.toml  setup.py
Datawrangler/datawrangler/: cleaning.py  exploration.py  manipulation.py  missing_values.py  outliners.py  utils.py
Datawrangler/datawrangler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Datawrangler/tests/: test_cleaning.py  test_manipulation.py  test_missing_values.py  test_outliners.py
W3/: README.md
W5/: beginner_task_5.py
calculator_unittest/: calculator_app.py  test.py  test_calculator.py
favour_adeboye_weather_client/: READ.md  test_weather_client.py  weather_client.py
project-1/: beginner_task_3.py
to_do_list_app/: test_todo_list_app.py  todo_list_app.py
