[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datawrangler_favouradeboye123"
version = "0.0.1"
authors = [
  { name="Favour Adeboye", email="adeboyefavour123@gmail.com" },
]
description = "datawrangler package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["datawrangler/"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
